<resources>
    <string name="app_name">The Sable Business Directory</string>
    <string name="business_logo">Business Logo</string>
    <string name="business_near_you">Business Near You</string>
    <string name="filter_by">Filter by...</string>
    <string name="add_listing">Add Listing</string>
    <string name="add_listing_button">Add Listing Button</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="description">Description:</string>
    <string name="enter_business_description">Enter Business Description</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="enter_business_name">Business Name</string>
    <string name="uploade_image_2">Uploade Image 2</string>
    <string name="camera_button">Camera Button</string>
    <string name="upload_image_1">Upload Image 1</string>
    <string name="uploade_image_4">Uploade Image 4</string>
    <string name="upload_image_3">Upload Image 3</string>
    <string name="uploade_image_5">Uploade Image 5</string>
    <string name="upload_image_6">Upload Image 6</string>
    <string name="video_button">Video Button</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="hours">hours</string>
    <string name="isOpen">isOpen</string>
    <string name="listingdescription">Listing Description</string>
    <string name="click_to_call">Click To Call</string>
    <string name="click_for_directions">Click For Directions</string>
    <string name="of_ratings"># of ratings</string>
    <string name="listingState">State</string>
    <string name="listingZip">Zip</string>
    <string name="listingPhone">123-456-7890</string>
    <string name="listingCity">City</string>
    <string name="listingAddress">Address</string>
    <string name="shop">SHOP</string>
    <string name="your_current_location">Your Current Location</string>
    <string name="textview">TextView</string>
    <string name="tvlat">Latitude</string>
    <string name="tvLong">Longitude</string>
    <string name="call">CALL</string>
    <string name="directions">DIRECTIONS</string>
</resources>
