<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/currentLocationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/your_current_location"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#4FC1E9"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/mapLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:padding="3dp">

        <Spinner
            android:id="@+id/spnRadius"
            style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0"
            android:background="@drawable/ovalbackground"
            android:text="@string/add_listing"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnShop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@drawable/ovalbackground"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/shop"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/texty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="NEARBY LOCATIONS"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#4FC1E9"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="5dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spnCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:iconifiedByDefault="true"
            android:queryBackground="@drawable/customborder"
            android:queryHint="Search businesses..."
            android:theme="@style/AppSearchView"
            android:visibility="visible">

        </SearchView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loggedInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivUserImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="userEmail"
                android:visibility="visible"
                tools:text="useremail" />

            <LinearLayout
                android:id="@+id/btnLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/customborder"
                    app:srcCompat="@drawable/email" />

                <ImageButton
                    android:id="@+id/btnTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/customborder"
                    app:srcCompat="@drawable/twitter" />

                <ImageButton
                    android:id="@+id/btnFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/customborder"
                    app:srcCompat="@drawable/facebook" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvHello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hello" />

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="userName"
                    android:textColor="@color/black"
                    tools:text="username" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvThankYou"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="This is where we will thank the user for their review and encrouage them to continue to help us grow the directory."
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="5dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:id="@+id/verticalRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/verticalRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>